2010-03-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * THANKS, src/vte.c:
   Apply patch from Yoann Le Montagner to set VTE bold color (thanks,
   fixes #2976905).
 * wscript, src/plugindata.h, src/stash.c, src/stash.h, src/plugins.c,
   src/Makefile.am, doc/plugins.dox, doc/stash-example.c,
   plugins/geanyfunctions.h, plugins/geanyplugin.h:
   Add Stash setting functions to API.
   Remove unnecessary argument to stash_group_load_from_file().
 * src/geanyobject.c, plugins/classbuilder.c:
   Don't generate FOO_GET_PRIVATE() macro because caching the result
   in Foo::priv can be much more efficient.


2010-03-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   Fix cursor positioning when toggling comments
   (patch by Thomas Martitz, thanks).


2010-03-25  Peter Scholtens  <peter(dot)scholtens(at)xs4all(dot)nl>

 * src/keybindings.[hc]:
   Added Control+0 for zoom reset, see suggestion from #2969886.


2010-03-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c, src/document.c:
   Fix wrong selection range after Replace in Selection.


2010-03-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/win32.c:
   Make CreateChildProcess() working with Unicode strings, e.g.
   directory names (closes #2972606).
 * geany.nsi:
   Remove reference to already removed latex.tags file.
   Future releases probably still depend on GTK 2.16.
 * scintilla/ScintillaGTK.cxx:
   Backport fix from Scintilla CVS to not paste text beyond the end
   of lines (closes #2969096).
 * plugins/htmlchars.c, src/geany.h, src/keybindings.c, src/main.c,
   src/plugindata.h:
   Deprecate GEANY_WINDOW_MINIMAL_WIDTH/GEANY_WINDOW_MINIMAL_HEIGHT
   to not set Geany's minimum window size anymore (closes #2972992).
   As replacement, add GEANY_DEFAULT_DIALOG_HEIGHT.


2010-03-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/stash.c: